test/good/automatic/base/without_input/ret_nonzero/0001.lat
// accessibility

int c() {
  if("xD" <= "xD")
    error();
}

int main() {
  int a = c();
}
