test/bad/automatic/base/compile_time/0043.lat
int main() {
    if(true)
        int a;
    return a;
}